added womenclothing to all category

--- a/LightInTheBox/src/Component/Navbar/Navbar.css
+++ b/LightInTheBox/src/Component/Navbar/Navbar.css
@@ -32,6 +32,9 @@
     background-color: rgb(246, 66, 66);
     color: white;
 }
+.navbar{
+    position: relative;
+}
 
 .card-size {
     position: absolute;
