--- a/LightInTheBox/src/Component/AllCategory/AllCategory.css
+++ b/LightInTheBox/src/Component/AllCategory/AllCategory.css
@@ -6,6 +6,7 @@
     padding: 8px 0;
     height: 320px;
     min-height: 320px;
+    position: absolute;
 }
 .category a{
     text-decoration: none;
