commited mens clothing

--- a/LightInTheBox/src/Component/WomensClothing/WomensClothing.css
+++ b/LightInTheBox/src/Component/WomensClothing/WomensClothing.css
@@ -1,4 +1,4 @@
-.dress-category h3{
+/* .dress-category h3{
 color: black;
 font-size: 18px;
 font-weight: 500;
@@ -19,7 +19,7 @@ font-weight: 500;
 }
 .womens-container{
     background-color: blanchedalmond;
-    /* width: 200px; */
+    
 }
 
-
+ */
