--- a/LightInTheBox/src/Component/AllCategory/AllCategory.css
+++ b/LightInTheBox/src/Component/AllCategory/AllCategory.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    background-color: antiquewhite;
+    background-color: white;
     padding: 8px 0;
     height: 320px;
     min-height: 320px;
